samples/_failures_safe/1761505701_732b8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5914bbac.c: In function ‘main’:
./samples/SAFE/__tmp_5914bbac.c:169:5: error: expected identifier or ‘(’ at end of input
  169 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_5914bbac.c:169:5: error: expected declaration or statement at end of input
